--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <header> crow perch
-    <h1>Hello, world</h1> <br>
+    <h1>Hello, world</h1> 
     <hr>
-        <a href="https://example.com">
-  <button>Click me!</button>
-</a>
+        <a href="https://belligerentcrow.github.io/writing"> <ul> <li> wip </li> </ul> </a>
     </header>
     <p> hello!! </p>   
     </body>
