--- a/writing/index.html
+++ b/writing/index.html
@@ -10,9 +10,16 @@
 <body>
   <header> <h1>Hello, world</h1>
   <hr>
-    <ul> <li> <a href="https://belligerentcrow.github.io"> go back</a> </li> </ul> </header>
+    <a href="https://belligerentcrow.github.io"> go back</a> </header>
     <div>
-      <p> yeet. </p> 
+        <h3> 6 dic </h3> 
+        <p> im bored</p>
+      <hr>  
+      <p> yeet. </p>
+        <details>
+        <summary>im spoiler 1</summary>
+        <p>haha loser</p>
+        </details>  
   </div>
  </body>
 </html>
