--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header> crow perch
     <h1>Hello, world</h1> 
     <hr>
-        <a href="https://belligerentcrow.github.io/writing"> <ul> <li> wip </li> </ul> </a>
+        <ul> <li> <a href="https://belligerentcrow.github.io/writing">  writing </a> </li> / <li> <a href="https://belligerentcrow.github.io/about">about</a> </li> </ul> 
     </header>
     <p> hello!! </p>   
     </body>
