--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header> crow perch
     <h1>Hello, world</h1> 
     <hr>
-        <ul> <li> <a href="https://belligerentcrow.github.io/writing">  writing </a> </li> / <li> <a href="https://belligerentcrow.github.io/about">about</a> </li> </ul> 
+         <a href="https://belligerentcrow.github.io/writing">  writing </a> // <a href="https://belligerentcrow.github.io/about">about</a> 
     </header>
     <p> hello!! </p>   
     </body>
