--- a/writing/index.html
+++ b/writing/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>writing.</title>
    <link rel="stylesheet" href="https://newcss.net/theme/night.css"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
 </head>
 <body>
-  <header> <h1>Hello, world</h1>
+  <header> <h1>writing/h1>
   <hr>
     <a href="https://belligerentcrow.github.io"> go back</a> </header>
     <div>
