--- a/writing/index.html
+++ b/writing/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
 </head>
 <body>
-  <header> <h1>writing/h1>
+  <header> <h1>writing</h1>
   <hr>
     <a href="https://belligerentcrow.github.io"> go back</a> </header>
     <div>
