--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <header> crow perch
-    <h1>Hello, world</h1> 
+    <header> 
+    <h1>crow perch</h1> 
     <hr>
          <a href="https://belligerentcrow.github.io/writing">  writing </a> // <a href="https://belligerentcrow.github.io/about">about</a> 
     </header>
