--- a/writing/index.html
+++ b/writing/index.html
@@ -18,7 +18,7 @@
       <p> yeet. </p>
         <details>
         <summary>im spoiler 1</summary>
-        <p>haha loser</p>
+        <p>suca</p>
         </details>  
   </div>
  </body>
