--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header> 
     <h1>crow perch</h1> 
     <hr>
-         <a href="https://belligerentcrow.github.io/writing">  writing </a> // <a href="https://belligerentcrow.github.io/about">about</a> 
+         <a href="https://belligerentcrow.github.io/writing">  writing </a> // <a href="https://belligerentcrow.github.io/about">about</a> // <a href="https://belligerentcrow.github.io/istruzioniMacchina">appunti assembly </a>
     </header>
     <p> hello!! </p>   
     </body>
