--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -6,7 +6,8 @@ html {
 }
 * {
 	box-sizing: border-box;
-	-webkit-print-color-adjust: exact;
+	/*-webkit-print-color-adjust: exact; */
+	background-color: #ede8da;
 }
 
 html,
@@ -18,7 +19,7 @@ body {
 	body {
 		margin: 2em auto;
 		max-width: 900px;
-		color: rgb(55, 53, 47);
+		color: #ede8da;
 	}
 }
 
