--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -7,7 +7,7 @@ html {
 * {
 	box-sizing: border-box;
 	/*-webkit-print-color-adjust: exact; */
-	background-color: #ede8da;
+	background-color: #151412;
 }
 
 html,
