--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -108,7 +108,7 @@ hr {
 	height: 1px;
 	visibility: visible;
 	border: none;
-	border-bottom: 1px solid rgba(55, 53, 47, 0.09);
+	border-bottom: 1px solid rgb(237, 232, 218);
 }
 
 img {
@@ -169,13 +169,13 @@ img {
 .table_of_contents-link {
 	text-decoration: none;
 	opacity: 0.7;
-	border-bottom: 1px solid rgba(55, 53, 47, 0.18);
+	/*border-bottom: 1px solid rgba(55, 53, 47, 0.18);*/
 }
 
 table,
 th,
 td {
-	border: 1px solid rgba(55, 53, 47, 0.09);
+	border: 1px solid rgb(237, 232, 218);
 	border-collapse: collapse;
 }
 
@@ -194,7 +194,7 @@ td {
 }
 
 th {
-	color: rgba(55, 53, 47, 0.6);
+	color: rgb(237, 232, 218);
 }
 
 ol,
@@ -257,6 +257,9 @@ ol > li {
 .toggle {
 	padding-inline-start: 0em;
 	list-style-type: none;
+	display: none; 
+	overflow: hidden;
+	background-color: #f5eacb; 
 }
 
 /* Indent toggle children */
@@ -269,7 +272,7 @@ ol > li {
 }
 
 .selected-value {
-	display: inline-block;
+	display: none;
 	padding: 0 0.5em;
 	background: rgba(206, 205, 202, 0.5);
 	border-radius: 3px;
@@ -290,8 +293,8 @@ ol > li {
 }
 
 .simple-table-header {
-	background: rgb(247, 246, 243);
-	color: black;
+	/*background: rgb(247, 246, 243);*/
+	color: white;
 	font-weight: 500;
 }
 
