--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -259,7 +259,7 @@ ol > li {
 	list-style-type: none;
 	display: none; 
 	overflow: hidden;
-	background-color: #f5eacb; 
+	background-color: #25231f; 
 }
 
 /* Indent toggle children */
