--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -257,7 +257,7 @@ ol > li {
 .toggle {
 	padding-inline-start: 0em;
 	list-style-type: none;
-	display: none; 
+	/*display: none;*/ 
 	overflow: hidden;
 	background-color: #25231f; 
 }
