--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -257,8 +257,8 @@ ol > li {
 .toggle {
 	padding-inline-start: 0em;
 	list-style-type: none;
-	/*display: none;*/ 
-	overflow: hidden;
+	display: inline-block !important;
+	overflow: hidden !important;
 	background-color: #25231f; 
 }
 
