--- a/istruzioniMacchina/index.html
+++ b/istruzioniMacchina/index.html
@@ -259,7 +259,7 @@ ol > li {
 	list-style-type: none;
 	display: inline-block !important;
 	overflow: hidden !important;
-	background-color: #25231f; 
+	background-color: #25231f !important; 
 }
 
 /* Indent toggle children */
